compatibilizadas las clases