@@ -1,22 +1,23 @@
 package com.example.demo.service;
 
-import com.dream_team.proyecto_final_progra3.dto.CostoServAdicionalDTO;
-import com.dream_team.proyecto_final_progra3.dto.ServicioDTO;
-import com.dream_team.proyecto_final_progra3.entity.CostoServAdicional;
-import com.dream_team.proyecto_final_progra3.entity.enums.ServAdicionalEnum;
-import com.dream_team.proyecto_final_progra3.repository.CostoServAdicionalRepository;
+import com.example.demo.dto.CostoServAdicionalDTO;
+import com.example.demo.mapper.CostoServAdicionalMapper;
+import com.example.demo.model.CostoServAdicional;
+import com.example.demo.model.enums.ServAdicionalEnum;
+import com.example.demo.repository.CostoServAdicionalRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class CostoServAdicionalService {
 
     @Autowired
     private CostoServAdicionalRepository costoRepo;
+    @Autowired
+    private CostoServAdicionalMapper costoMapper;
 
     public List<CostoServAdicional> findAll() {
         return costoRepo.findAll();
@@ -38,41 +39,42 @@ public class CostoServAdicionalService {
         costoRepo.deleteById(id);
     }
 
+
     /**
      * Método privado que mapea una entidad CostoServAdicional a su DTO.
      */
-    private CostoServAdicionalDTO toDTO(CostoServAdicional entidad) {
+    // se usa el mapper toDTO
+/*    private CostoServAdicionalDTO toDTO(CostoServAdicional entidad) {
         // Primero, construyo el ServicioDTO a partir del enum y el precio base
         ServicioDTO servicioDTO = new ServicioDTO(
                 entidad.getId(),
                 entidad.getNombre().name(),
                 entidad.getPrecio()
         );
-
         // Luego, armo el CostoServAdicionalDTO con id, servicioDTO y precio unitario
         return new CostoServAdicionalDTO(
                 entidad.getId(),
                 servicioDTO,
                 entidad.getPrecio()
         );
-    }
+    }*/
 
     /**
      * 1) Retorna todos los registros como lista de DTOs.
      */
+
     public List<CostoServAdicionalDTO> findAllDTO() {
         return costoRepo.findAll()
                 .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(p->costoMapper.toDto(p))
+                .toList();
     }
 
     /**
      * 2) Busca uno por ID y lo convierte a DTO.
      */
     public Optional<CostoServAdicionalDTO> findByIdDTO(Long id) {
-        return costoRepo.findById(id)
-                .map(this::toDTO);
+        return Optional.ofNullable(costoMapper.toDto(costoRepo.findById(id).get()));
     }
 
     /**
@@ -84,13 +86,11 @@ public class CostoServAdicionalService {
         ServAdicionalEnum enumNombre;
         try {
             enumNombre = ServAdicionalEnum.valueOf(
-                    dtoRequest.getNombreServicioAdicional()
-                            .getNombre()
-                            .toUpperCase()
+                    dtoRequest.getNombreServicioAdicional().toUpperCase()
             );
         } catch (IllegalArgumentException e) {
             throw new RuntimeException("Nombre de servicio inválido: "
-                    + dtoRequest.getNombreServicioAdicional().getNombre());
+                    + dtoRequest.getNombreServicioAdicional());
         }
 
         // Si dtoRequest.getId() no es null, busco la entidad existente; si no, creo una nueva
@@ -102,6 +102,6 @@ public class CostoServAdicionalService {
         entidad.setPrecio(dtoRequest.getPrecioUnitario());
 
         CostoServAdicional guardada = costoRepo.save(entidad);
-        return toDTO(guardada);
+        return costoMapper.toDto(guardada);
     }
 }
